
Copyright (c) 2002-2007 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/

$Id$


2007.May.15 (0.9.17)

  * Interface Improvements:
    -----------------------
    * Mouse cursor can be hidden (e.g., using "--hidecursor"), useful on
      touchscreen devices like tablet PCs or the Nokia Mameo devices.

  * Tool Improvements:
    ------------------
    * Input Method Framework, with implementations of Korean (Hangul 2-Bul)
      and Japanese (Romanized Hiragana and Romanized Katakana) input methods.
      (Should be extensible to other languages.)
      (Addresses SourceForge Bug #1070414)
      Mark K. Kim <mkkim214@gmail.com>

    * Stamps now supports SVG vector-based graphics!  (Via Cairo library)
      (Only SVG versions of stamps are loaded, when both PNG and SVG
      variations are found.)

      (Experimental; build with "make nosvg" to disable SVG support and
      Cairo dependency.)

    * Stamps now shown in groups.
      FIXME: Finish!
      (Addresses SourceForge Feature Request #1070394)

    * Bilinear interpolation (smoothing) is done to small bitmap (PNG)
      stamps when they are scaled up.
      (Based on example code by Christian Graus:
      http://www.codeproject.com/cs/media/imageprocessing4.asp )

    * New brushes:
      Caroline Ford <caroline.ford.work@googlemail.com>
      + Blob
      + Chisle
      + Cut-out square in diamond
      + Cut-out star in circle
      + Diamond
      + Five-petal flower (large and small)
      + Six-petal flower (large and small)
      + Heart
      + Hexagon
      + Lozenge
      + Oval
      + Pentagon
      + Spiral
      + Splat
      + Star
      + Triangle (up and down)

  * System-related improvements:
    ----------------------------
    * When running in fullscreen mode, you may now ask Tux Paint to display
      at the screen's (more precisely, the operating system's) current
      resolution.  Either use both "fullscreen=yes" and "native=yes" in the