@@ -413,6 +413,12 @@ New Breed Software</p>
     fun, or in a test environment.
   </dd>
 
+  <dt><code><b>autosave=yes</b></code></dt>
+  <dt>
+    This prevents Tux&nbsp;Paint from asking whether you want to save
+    the current picture when quitting, and assumes you do.
+  </dt>
+
   <dt><code><b>startblank=yes</b></code</dt>
   <dd>
     This causes Tux&nbsp;Paint to display a blank canvas when it first
@@ -886,6 +892,7 @@ New Breed Software</p>
     --saveover<br>
     --saveovernew<br>
     --nosave<br>
+    --autosave<br>
     --lang&nbsp;<i>LANGUAGE</i><br>
     </b></code></dt>
     <dd>
@@ -919,6 +926,7 @@ New Breed Software</p>
     --mouse<br>
     --saveoverask<br>
     --save<br>
+    --noautosave<br>
     </b></code></dt>
     <dd>
       These options can be used to override any settings made in
